--- a/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb
+++ b/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb
@@ -38,27 +38,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- train/val/test data 분리"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "downloading aclImdb_v1.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\GitHub\\time-series-forecasting\\RNN-IMDB_dataset\\.data\\imdb\\aclImdb_v1.tar.gz: 100%|██████████| 84.1M/84.1M [00:11<00:00, 7.22MB/s]\n"
+      "{'text': ['bromwell', 'high', 'is', 'a', 'cartoon', 'comedy.', 'it', 'ran', 'at', 'the', 'same', 'time', 'as', 'some', 'other', 'programs', 'about', 'school', 'life,', 'such', 'as', '\"teachers\".', 'my', '35', 'years', 'in', 'the', 'teaching', 'profession', 'lead', 'me', 'to', 'believe', 'that', 'bromwell', \"high's\", 'satire', 'is', 'much', 'closer', 'to', 'reality', 'than', 'is', '\"teachers\".', 'the', 'scramble', 'to', 'survive', 'financially,', 'the', 'insightful', 'students', 'who', 'can', 'see', 'right', 'through', 'their', 'pathetic', \"teachers'\", 'pomp,', 'the', 'pettiness', 'of', 'the', 'whole', 'situation,', 'all', 'remind', 'me', 'of', 'the', 'schools', 'i', 'knew', 'and', 'their', 'students.', 'when', 'i', 'saw', 'the', 'episode', 'in', 'which', 'a', 'student', 'repeatedly', 'tried', 'to', 'burn', 'down', 'the', 'school,', 'i', 'immediately', 'recalled', '.........', 'at', '..........', 'high.', 'a', 'classic', 'line:', 'inspector:', \"i'm\", 'here', 'to', 'sack', 'one', 'of', 'your', 'teachers.', 'student:', 'welcome', 'to', 'bromwell', 'high.', 'i', 'expect', 'that', 'many', 'adults', 'of', 'my', 'age', 'think', 'that', 'bromwell', 'high', 'is', 'far', 'fetched.', 'what', 'a', 'pity', 'that', 'it', \"isn't!\"], 'label': 'pos'}\n"
      ]
     }
    ],
    "source": [
-    "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)"
+    "print(vars(train_data.examples[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for exam in train_data.examples:\n",
+    "    text = [x.lower() for x in vars(exam)['text']]\n",
+    "    text = [x.replace('<br', '') for x in text]\n",
+    "    text = [''.join(c for c in s if c not in string.punctuation) for s in text]\n",
+    "    text = [s for s in text if s]\n",
+    "    vars(exam)['text'] = text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, val_data = train_data.split(random_state=random.seed(0), split_ratio=0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of train examples: 20000\n",
+      "Number of val examples: 5000\n",
+      "Number of test examples: 25000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of train examples: {len(train_data)}')\n",
+    "print(f'Number of val examples: {len(val_data)}')\n",
+    "print(f'Number of test examples: {len(test_data)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 단어 집합 만들기 : build_vocab\n",
+    "    - max_size : 단어 집합의 크기로 단어 집합에 포함되는 어휘 수\n",
+    "    - min_freq : 특정 단어의 최소 등장 횟수\n",
+    "    - vector : 임베딩 지정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique tokens in TEXT vocabulary: 10002\n",
+      "Unique tokens in LABEL vocabulary: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "TEXT.build_vocab(train_data, max_size=10000, min_freq=10, vectors=None)\n",
+    "LABEL.build_vocab(train_data)\n",
+    "\n",
+    "print(f'Unique tokens in TEXT vocabulary: {len(TEXT.vocab)}')\n",
+    "print(f'Unique tokens in LABEL vocabulary: {len(LABEL.vocab)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<bound method Vocab._default_unk_index of <torchtext.legacy.vocab.Vocab object at 0x00000189B6169F10>>, {'<unk>': 0, 'pos': 1, 'neg': 2})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(LABEL.vocab.stoi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 100\n",
+    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader, val_dataloader, test_dataloader = torchtext.legacy.data.BucketIterator.splits((train_data, val_data, test_data), batch_size=BATCH_SIZE, device=DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(TEXT.vocab)\n",
+    "n_classes = 2 # 긍정/부정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model import BasicRNN"
    ]
   },
   {
