--- a/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb
+++ b/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT = torchtext.legacy.data.Field(lower=True,  fix_length=200, batch_first=False)\n",
+    "TEXT = torchtext.legacy.data.Field(lower=True,  fix_length=200, batch_first=True)\n",
     "LABEL = torchtext.legacy.data.Field(sequential=False)"
    ]
   },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<bound method Vocab._default_unk_index of <torchtext.legacy.vocab.Vocab object at 0x00000189B6169F10>>, {'<unk>': 0, 'pos': 1, 'neg': 2})\n"
+      "defaultdict(<bound method Vocab._default_unk_index of <torchtext.legacy.vocab.Vocab object at 0x00000166153E2A90>>, {'<unk>': 0, 'pos': 1, 'neg': 2})\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,12 +194,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import BasicRNN"
+    "from model import BasicRNN\n",
+    "from utils import train, evaluate"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BasicRNN(n_layers=1, hidden_dim=256, n_vocab=vocab_size, embed_dim=128, n_classes=n_classes, dropout_p=0.5)\n",
+    "model.to(DEVICE)\n",
+    "\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BasicRNN(\n",
+      "  (embed): Embedding(10002, 128)\n",
+      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      "  (rnn): RNN(128, 256, batch_first=True)\n",
+      "  (out): Linear(in_features=256, out_features=2, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 [0/20000(0.0%)] \tLoss: 0.683027\n",
+      "Train Epoch: 1 [5000/20000(25.0%)] \tLoss: 0.694591\n",
+      "Train Epoch: 1 [10000/20000(50.0%)] \tLoss: 0.681756\n",
+      "Train Epoch: 1 [15000/20000(75.0%)] \tLoss: 0.700426\n",
+      "[EPOCH: 1], Val Loss: 0.6894723617553711 | Val Accuracy: 0.5162000060081482\n",
+      "Train Epoch: 2 [0/20000(0.0%)] \tLoss: 0.662277\n",
+      "Train Epoch: 2 [5000/20000(25.0%)] \tLoss: 0.683297\n",
+      "Train Epoch: 2 [10000/20000(50.0%)] \tLoss: 0.689828\n",
+      "Train Epoch: 2 [15000/20000(75.0%)] \tLoss: 0.666543\n",
+      "[EPOCH: 2], Val Loss: 0.6954123641967773 | Val Accuracy: 0.5013999938964844\n",
+      "Train Epoch: 3 [0/20000(0.0%)] \tLoss: 0.684097\n",
+      "Train Epoch: 3 [5000/20000(25.0%)] \tLoss: 0.693774\n",
+      "Train Epoch: 3 [10000/20000(50.0%)] \tLoss: 0.694919\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32md:\\GitHub\\time-series-forecasting\\RNN-IMDB_dataset\\RNN_IMDB_dataset.ipynb Cell 20\u001b[0m line \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m EPOCH \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m e \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, EPOCH\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     train(model\u001b[39m=\u001b[39;49mmodel, optimizer\u001b[39m=\u001b[39;49moptimizer, train_dataloader\u001b[39m=\u001b[39;49mtrain_dataloader, device\u001b[39m=\u001b[39;49mDEVICE)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     val_loss, val_accuracy \u001b[39m=\u001b[39m evaluate(model\u001b[39m=\u001b[39mmodel, val_dataloader\u001b[39m=\u001b[39mval_dataloader, device\u001b[39m=\u001b[39mDEVICE)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[EPOCH: \u001b[39m\u001b[39m{\u001b[39;00me\u001b[39m}\u001b[39;00m\u001b[39m], Val Loss: \u001b[39m\u001b[39m{\u001b[39;00mval_loss\u001b[39m}\u001b[39;00m\u001b[39m | Val Accuracy: \u001b[39m\u001b[39m{\u001b[39;00mval_accuracy\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32md:\\GitHub\\time-series-forecasting\\RNN-IMDB_dataset\\RNN_IMDB_dataset.ipynb Cell 20\u001b[0m line \u001b[0;36mtrain\u001b[1;34m(model, optimizer, train_dataloader, device)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m logit \u001b[39m=\u001b[39m model(x)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m loss \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mnn\u001b[39m.\u001b[39mfunctional\u001b[39m.\u001b[39mcross_entropy(logit, y)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/GitHub/time-series-forecasting/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb#X26sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mif\u001b[39;00m idx \u001b[39m%\u001b[39m \u001b[39m50\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\torch\\_tensor.py:255\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    246\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    247\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    248\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    249\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    253\u001b[0m         create_graph\u001b[39m=\u001b[39mcreate_graph,\n\u001b[0;32m    254\u001b[0m         inputs\u001b[39m=\u001b[39minputs)\n\u001b[1;32m--> 255\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\torch\\autograd\\__init__.py:147\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    144\u001b[0m \u001b[39mif\u001b[39;00m retain_graph \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    145\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m--> 147\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(\n\u001b[0;32m    148\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[0;32m    149\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "BATCH_SIZE = 100\n",
+    "LR = 0.001\n",
+    "EPOCH = 5\n",
+    "\n",
+    "for e in range(1, EPOCH+1):\n",
+    "    train(model=model, optimizer=optimizer, train_dataloader=train_dataloader, device=DEVICE)\n",
+    "    val_loss, val_accuracy = evaluate(model=model, val_dataloader=val_dataloader, device=DEVICE)\n",
+    "\n",
+    "    print(f'[EPOCH: {e}], Val Loss: {val_loss} | Val Accuracy: {val_accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
