--- a/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb
+++ b/RNN-IMDB_dataset/RNN_IMDB_dataset.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,10 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.697592 | Test Acc: 0.502680\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = evaluate(model=model, val_dataloader=test_dataloader, device=DEVICE)\n",
+    "print(f'Test Loss: {test_loss:.6f} | Test Acc: {test_acc:.6f}')"
+   ]
   },
   {
    "cell_type": "code",
