feat : build model

--- a/GRU_cell_MNIST_dataset/LSTM_cell_MNIST.ipynb
+++ b/GRU_cell_MNIST_dataset/LSTM_cell_MNIST.ipynb
@@ -206,7 +206,76 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class GRU_cell(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, bias=True):\n",
+    "        super(GRU_cell, self).__init__()\n",
+    "\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.bias = bias\n",
+    "        self.x2h = nn.Linear(input_size, 3 * hidden_size, bias=bias)\n",
+    "        self.h2h = nn.Linear(hidden_size, 3 * hidden_size, bias=bias)\n",
+    "        self.reset_parameters()\n",
+    "    \n",
+    "    def reset_parameters(self):\n",
+    "        std = 1.0 / math.sqrt(self.hidden_size)\n",
+    "        for w in self.parameters():\n",
+    "            w.data.uniform_(-std, std)\n",
+    "    \n",
+    "\n",
+    "    def forward(self, x, hidden):\n",
+    "        x = x.view(-1, x.size(0))\n",
+    "\n",
+    "        gate_x = self.x2h(x)\n",
+    "        gate_h = self.h2h(hidden)\n",
+    "        gate_x = gate_x.squeeze()\n",
+    "        gate_h = gate_h.squeeze()\n",
+    "\n",
+    "        i_r, i_i, i_n = gate_x.chunk(3, 1)\n",
+    "        h_r, h_i, h_n = gate_h.chunk(3, 1)\n",
+    "\n",
+    "        resetgate = F.sigmoid(i_r, h_r)\n",
+    "        inputgate = F.sigmoid(i_i, h_i)\n",
+    "        newgate = F.tanh(i_n + (resetgate * h_n))\n",
+    "\n",
+    "        hy = newgate + inputgate * (hidden - newgate)\n",
+    "\n",
+    "        return hy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GRU(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, layer_dim, output_dim, bias=True):\n",
+    "        super(GRU, self).__init__()\n",
+    "\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.layer_dim = layer_dim\n",
+    "        self.gru_cell = GRU_cell(input_dim, hidden_dim, layer_dim)\n",
+    "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        if torch.cuda.is_available():\n",
+    "            h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim).cuda())\n",
+    "        else:\n",
+    "            h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim))\n",
+    "        \n",
+    "        outs = []\n",
+    "        hn = h0[0, :, :]\n",
+    "\n",
+    "        for seq in range(x.size(1)):\n",
+    "            hn = self.gru_cell(x[:, seq, :], hn)\n",
+    "            outs.append(hn)\n",
+    "            out = outs[-1].squeeze()\n",
+    "            out = self.fc(out)\n",
+    "\n",
+    "            return out"
+   ]
   },
   {
    "cell_type": "code",
