feat : eval & test

--- a/GRU_cell_MNIST_dataset/LSTM_cell_MNIST.ipynb
+++ b/GRU_cell_MNIST_dataset/LSTM_cell_MNIST.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,18 +225,19 @@
     "    \n",
     "\n",
     "    def forward(self, x, hidden):\n",
-    "        x = x.view(-1, x.size(0))\n",
+    "        x = x.view(-1, x.size(1))\n",
     "\n",
     "        gate_x = self.x2h(x)\n",
     "        gate_h = self.h2h(hidden)\n",
+    "        \n",
     "        gate_x = gate_x.squeeze()\n",
     "        gate_h = gate_h.squeeze()\n",
     "\n",
     "        i_r, i_i, i_n = gate_x.chunk(3, 1)\n",
     "        h_r, h_i, h_n = gate_h.chunk(3, 1)\n",
     "\n",
-    "        resetgate = F.sigmoid(i_r, h_r)\n",
-    "        inputgate = F.sigmoid(i_i, h_i)\n",
+    "        resetgate = F.sigmoid(i_r + h_r)\n",
+    "        inputgate = F.sigmoid(i_i + h_i)\n",
     "        newgate = F.tanh(i_n + (resetgate * h_n))\n",
     "\n",
     "        hy = newgate + inputgate * (hidden - newgate)\n",
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,10 +272,167 @@
     "        for seq in range(x.size(1)):\n",
     "            hn = self.gru_cell(x[:, seq, :], hn)\n",
     "            outs.append(hn)\n",
-    "            out = outs[-1].squeeze()\n",
-    "            out = self.fc(out)\n",
+    "            \n",
+    "        out = outs[-1].squeeze()\n",
+    "        out = self.fc(out)\n",
     "\n",
-    "            return out"
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 28\n",
+    "hidden_dim = 128\n",
+    "layer_dim = 1\n",
+    "output_dim = 10\n",
+    "\n",
+    "model = GRU(input_dim=input_dim, hidden_dim=hidden_dim, layer_dim=layer_dim, output_dim=output_dim)\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    model.cuda()\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "lr = 0.1\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=lr, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 500, Loss: 0.14868347346782684, Accuracy: 94.56999969482422\n",
+      "Iteration: 1000, Loss: 0.11673645675182343, Accuracy: 96.80999755859375\n",
+      "Iteration: 1500, Loss: 0.14605703949928284, Accuracy: 97.62999725341797\n",
+      "Iteration: 2000, Loss: 0.011644669808447361, Accuracy: 98.41000366210938\n",
+      "Iteration: 2500, Loss: 0.0691923201084137, Accuracy: 97.91999816894531\n",
+      "Iteration: 3000, Loss: 0.09894999116659164, Accuracy: 97.75\n",
+      "Iteration: 3500, Loss: 0.03623463958501816, Accuracy: 98.66000366210938\n",
+      "Iteration: 4000, Loss: 0.07533424347639084, Accuracy: 98.76000213623047\n",
+      "Iteration: 4500, Loss: 0.21248973906040192, Accuracy: 98.66000366210938\n",
+      "Iteration: 5000, Loss: 0.00031871243845671415, Accuracy: 98.75\n",
+      "Iteration: 5500, Loss: 0.011565646156668663, Accuracy: 98.81999969482422\n",
+      "Iteration: 6000, Loss: 0.008013850077986717, Accuracy: 98.7300033569336\n",
+      "Iteration: 6500, Loss: 0.001384919392876327, Accuracy: 98.61000061035156\n",
+      "Iteration: 7000, Loss: 0.006745252758264542, Accuracy: 98.94999694824219\n",
+      "Iteration: 7500, Loss: 0.007799198850989342, Accuracy: 98.94999694824219\n",
+      "Iteration: 8000, Loss: 0.018120545893907547, Accuracy: 98.87999725341797\n",
+      "Iteration: 8500, Loss: 0.001561518176458776, Accuracy: 99.05999755859375\n",
+      "Iteration: 9000, Loss: 0.0040030283853411674, Accuracy: 99.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq_dim = 28\n",
+    "loss_list = []\n",
+    "iter = 0\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    for i, (images, labels) in enumerate(dataloaders['train']):\n",
+    "        if torch.cuda.is_available():\n",
+    "            images = Variable(images.view(-1, seq_dim, input_dim).cuda())\n",
+    "            labels = Variable(labels.cuda())\n",
+    "        else:\n",
+    "            images = Variable(images.view(-1, seq_dim, input_dim))\n",
+    "            labels = Variable(labels)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "\n",
+    "        if torch.cuda.is_available():\n",
+    "            loss.cuda()\n",
+    "        \n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        loss_list.append(loss.item())\n",
+    "        iter += 1\n",
+    "\n",
+    "        if iter % 500 == 0:\n",
+    "            correct = 0\n",
+    "            total = 0\n",
+    "\n",
+    "            for images, labels in dataloaders['val']:\n",
+    "                if torch.cuda.is_available():\n",
+    "                    images = Variable(images.view(-1, seq_dim, input_dim).cuda())\n",
+    "                else:\n",
+    "                    images = Variable(images.view(-1, seq_dim, input_dim))\n",
+    "                \n",
+    "                outputs = model(images)\n",
+    "                _, preds = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "\n",
+    "                if torch.cuda.is_available():\n",
+    "                    correct += (preds.cpu() == labels.cpu()).sum()\n",
+    "                else:\n",
+    "                    correct += (preds == labels).sum()\n",
+    "            \n",
+    "            accuracy = 100 * correct / total\n",
+    "\n",
+    "            print(f'Iteration: {iter}, Loss: {loss.item()}, Accuracy: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## eval & test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(model, dataloaders):\n",
+    "    corrects, total, total_loss = 0, 0, 0\n",
+    "    model.eval()\n",
+    "\n",
+    "    for images, labels in dataloaders:\n",
+    "        if torch.cuda.is_available():\n",
+    "            images = Variable(images.view(-1, seq_dim, input_dim).cuda())\n",
+    "        else:\n",
+    "            images = Variable(images.view(-1, seq_dim, input_dim)).to(DEVICE)\n",
+    "        \n",
+    "        logit = model(images).to(DEVICE)\n",
+    "        loss = F.cross_entropy(logit, labels, reduction='sum')\n",
+    "        _, preds = torch.max(logit, 1)\n",
+    "        total += labels.size(0)\n",
+    "        total_loss += loss.item()\n",
+    "        corrects += (preds == labels).sum()\n",
+    "    \n",
+    "    avg_loss = total_loss / len(dataloaders.dataset)\n",
+    "    avg_accuracy = corrects / total\n",
+    "\n",
+    "    return avg_loss, avg_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss : 0.04065487438539276 | Test Accuracy : 0.9886999726295471\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = evaluate(model=model, dataloaders=dataloaders['test'])\n",
+    "print(f'Test Loss : {test_loss} | Test Accuracy : {test_acc}')"
    ]
   },
   {
